# Master_Thesis_2025

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md
cpp/fem/: stiffness_matrix_1d.cpp
cpp/include/: stiffness_matrix_1d.h  stiffness_matrix_1d.hpp
cpp/other/: launch.json
cpp/src/fem/: stiffness_matrix_1d.cpp
cpp/tests/: fem_tests.cpp  testing_stiffness_matrix.cpp
documents/: latexmkrc  main.tex  references.bib
documents/chapters/: intro.tex
matlab/: errors_exact_quad_p2.mat  errors_quad_p1.mat  errors_quad_p2.mat
matlab/+FEM/: FEM1D.m  errors1D.m  errorsQuad1D.m  massMatrix1D.m  projMassElementMatrix1D.m  projMassMatrix1D.m  stiffnessElementMatrix1D.m  stiffnessMatrix1D.m
matlab/+common/: QuadratureFEM.m  calculateBarycentricWeights.m  evaluateLagrangeBarycentric.m  getGaussLegendreQuadrature.m  getGaussLegendreQuadratureNodes.m  getLagrangeBasisFun.m  getLobattoQuadrature.m  getLobattoQuadratureNodes.m  getQuadrature.m  getShapeFunctionValueMatrix.m
matlab/+dg/: interiorFluxMatrix1D.m
matlab/+dg1d/: SIPGWaveSolver.m  SIPGWaveSolver1D.m  WavePostprocessor1D.m  WaveSolution.m  boundaryFluxMatrix1D.m  boundaryPenaltyMatrix1D.m  dirichletbcVector1D.m  energyNormError1D.m  interiorFluxMatrix1D.m  interiorPenaltyMatrix1D.m  neumannbcVector1D.m  sip_1d_elliptic_solver.m  sipdgDirichletLoadVector1D.m  sipdgMatrix1D.m
matlab/+fem1d/: BoundaryCondition1D.m  Errors1D.m  L2ProjectionErrorLinear.m  PDEData.m  errors1D.m  errors1DBetweenFemSol.m  errors1DWithExactSol.m  (+25 more)
report/: .latexmkrc  README.md  macros.sty  main.tex  preamble.tex  references.bib
(+51 files in other folders)
